<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@drawable/linear_full_gray">

        <EditText
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:id="@+id/search_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/search_name"
            android:textSize="13sp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:textCursorDrawable="@drawable/cursor_drawable"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:src="@drawable/searchicon"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_marginEnd="10dp"
            android:layout_weight="0.7"
            android:id="@+id/search_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/logintheme">

            <ImageView
                android:padding="3dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/searchcalendar"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/search_date"
                android:textSize="12sp"
                android:gravity="center_vertical"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/search_people"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/logintheme">

            <ImageView
                android:padding="3dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/searchpeople"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/search_people"
                android:textSize="12sp"
                android:gravity="center_vertical"

                android:textColor="@color/black"/>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textSize="13sp"
        android:textStyle="bold"
        android:text="@string/search_top"
        android:textColor="@color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp">

        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/do_gb"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/searchkw" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="3dp"
            android:id="@+id/do_gb_text"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/do_gb"
            android:text="@string/do_kangwon"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/do_jeju"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toEndOf="@id/do_gb"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/searchbs"
            android:layout_marginStart="10dp"/>
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/jeju_text"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/do_gb_text"
            android:text="@string/do_busan"
            app:layout_constraintTop_toBottomOf="@id/do_jeju"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:id="@+id/do_busan"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toEndOf="@id/do_jeju"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/searchjeju"
            android:layout_marginStart="10dp"/>
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/busan_text"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/jeju_text"
            android:text="@string/do_jeju"
            app:layout_constraintTop_toBottomOf="@id/do_busan"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:id="@+id/do_gangwon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toEndOf="@id/do_busan"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/searchgb"
            android:layout_marginStart="10dp"/>
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/gangwon_text"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/busan_text"
            android:text="@string/do_gb"
            app:layout_constraintTop_toBottomOf="@id/do_gangwon"
            android:layout_marginStart="10dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textSize="13sp"
        android:textStyle="bold"
        android:text="@string/search_keyword"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/search_infi"
                android:textColor="@color/black"
                android:textSize="13sp"/>
            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:text="@string/search_icon"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:textSize="13sp"/>

            <TextView
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/search_motel_event"
                android:textColor="@color/black"
                android:textSize="13sp"/>
            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:text="@string/search_icon"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:textSize="13sp"/>

            <TextView
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/search_seoul_hotel"
                android:textColor="@color/black"
                android:textSize="13sp"/>
            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:text="@string/search_icon"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:textSize="13sp"/>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/search_pool"
                android:textColor="@color/black"
                android:textSize="13sp"/>
            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:text="@string/search_icon"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:textSize="13sp"/>

            <TextView
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/search_wine"
                android:textColor="@color/black"
                android:textSize="13sp"/>
            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:text="@string/search_icon"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:textSize="13sp"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textSize="13sp"
            android:textStyle="bold"
            android:text="@string/search_recent"
            android:textColor="@color/black" />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textSize="10sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="end"
            android:text="@string/search_delete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="13sp"
            android:text="@string/search_recent_nothing"/>
    </LinearLayout>


</LinearLayout>