<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".src.main.home.recommend.weekly.WeeklyMobileFragment"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <ImageView
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:layout_marginStart="5dp"
            android:id="@+id/rc_mobile1"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:src="@drawable/rcmobile1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/rc_mobile1_text"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/rc_mobile1"
            android:textSize="13sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/rc_mobile1"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_marginEnd="20dp"
            android:id="@+id/price1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/rc_mobile_price"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/rc_mobile1_price"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/price1"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <ImageView
            android:padding="10dp"
            android:layout_marginStart="5dp"
            android:id="@+id/rc_mobile2"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:src="@drawable/rcmobile2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/rc_mobile2_text"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/rc_mobile2"
            android:textSize="13sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/rc_mobile2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_marginEnd="20dp"
            android:id="@+id/price2"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/rc_mobile_price"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/rc_mobile2_price"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/price2"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <ImageView
            android:padding="10dp"
            android:layout_marginStart="5dp"
            android:id="@+id/rc_mobile3"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:src="@drawable/rcmobile3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/rc_mobile3_text"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/rc_mobile3"
            android:textSize="13sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/rc_mobile3"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_marginEnd="20dp"
            android:id="@+id/price3"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/rc_mobile_price"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/rc_mobile3_price"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/price3"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>






</LinearLayout>