<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".src.main.home.HomeFragment">

    <LinearLayout
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:id="@+id/login_linear"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/recommend_logo"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            android:padding="5dp"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/recommend_search"
            android:layout_marginStart="10dp"
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/recommendsearch"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/login_btn_back"
            android:layout_marginStart="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/cart"
            android:padding="5dp"
            android:layout_gravity="center"/>


    </LinearLayout>
    <FrameLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="90dp"
            android:layout_height="3px"
            android:visibility="visible"
            android:background="#f2f2f2" />

    </FrameLayout>


    <com.google.android.material.tabs.TabLayout
        app:tabIndicatorFullWidth="false"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:tabTextAppearance="@style/tab_text"
        app:tabTextColor="@color/black"
        app:tabSelectedTextColor="@color/btnpink"
        app:layout_constraintTop_toBottomOf="@id/login_linear"
        app:tabIndicatorColor="@color/btnpink">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tab1" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tab2" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tab3" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tab4" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tab5" />




    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        android:id="@+id/login_viewPager"
        android:layout_width="match_parent"
        android:layout_marginTop="90dp"
        android:layout_height="match_parent">

    </androidx.viewpager2.widget.ViewPager2>






</androidx.constraintlayout.widget.ConstraintLayout>